fix(component): fix spacing=none in internet explorer
affects: ak-button

--- a/packages/ak-button/src/shadow.less
+++ b/packages/ak-button/src/shadow.less
@@ -134,8 +134,8 @@ ak-button {
   }
 
   &.spacing-none {
-    height: initial;
-    line-height: initial;
+    height: auto;
+    line-height: normal;
     padding: 0;
   }
 
